2001-11-16  Neil Jerram  <neil@ossau.uklinux.net>

	* debugging.texi, deprecated.texi, intro.texi, misc-modules.texi,
	new-docstrings.texi, posix.texi, scheme-binding.texi,
	scheme-control.texi, scheme-data.texi, scheme-debug.texi,
	scheme-evaluation.texi, scheme-io.texi, scheme-memory.texi,
	scheme-modules.texi, scheme-options.texi, scheme-procedures.texi,
	scheme-scheduling.texi, scheme-translation.texi,
	scheme-utility.texi, script-getopt.texi, srfi-modules.texi: Change
	category for "primitive" and "procedure" @deffn's to {Scheme
	Procedure}; add @deffnx lines for {C Function}s; automatic updates
	from libguile docstring changes.

	* scheme-memory.texi (Garbage Collection): Removed doc for removed
	`unhash-name'.

2001-11-14  Thien-Thi Nguyen  <ttn@glug.org>

	* scheme-procedures.texi: Spell "library" correctly.

2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>

	* new-docstrings.texi, scheme-data.texi: Merge recent doc
	improvements from stable branch.

	* scheme-options.texi: Automatic updates from docstring changes in
	libguile's C source code.

2001-11-12  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-data.texi (Vtables, Structure Basics): Automatic doc
	updates for struct? and struct-vtable?.
	(String Searching): Add missing "for".  Thanks to Scott Lenser.

2001-11-08  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi (Top): Added new chapter `Programming Options'.

	* program.texi: New file.

	* Makefile.am (guile_TEXINFOS): Added program.texi.

2001-11-07  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-memory.texi, scheme-io.texi, scheme-debug.texi,
	scheme-data.texi, scheme-binding.texi, posix.texi,
	new-docstrings.texi: Automatic updates from improved libguile
	docstrings.

2001-11-04  Neil Jerram  <neil@ossau.uklinux.net>

	* preface.texi: Use MANUAL_EDITION variable.
	(Manual Layout): Updated to reflect reorg.

	* guile.texi (MANUAL_EDITION): New variable, with value
	incremented from 1.0 to 1.1 to reflect the reorg described here.